fixing text alignment bug

--- a/MJStyleSheet.css
+++ b/MJStyleSheet.css
@@ -78,7 +78,7 @@
 }
 
 /*Image Text on opaque hover layer*/
-p {
+.hoverLayer p {
 	font-family: 'Inconsolata', monospace;
 	text-align: center;
 	font-size: 30px;
@@ -145,7 +145,6 @@ p {
 	padding-left: 30px;
 	padding-right: 3 0px;
 	display: block; !important
-
 	font-family: 'Inconsolata', monospace; !important
 }
 
@@ -203,6 +202,7 @@ p {
 
 /*keeping these paragraph stylings separate so I can change their layouts later*/
 #p1 {
+	font-family: 'Inconsolata', monospace;
 	text-align: center;
 	font-size: 40px;
 	padding-top: 10px;
@@ -212,6 +212,7 @@ p {
 }
 
 #p2 #p3 #p4{
+	font-family: 'Inconsolata', monospace;
 	text-align: center;
 	font-size: 20px;
 	padding-top: 10px;
@@ -220,9 +221,14 @@ p {
 	padding-bottom: 10px;
 }
 
-#p2 #p3 #p4 li{
-
+#contactPageTitle {
+	font-family: 'Inconsolata', monospace;
+	position: absolute;
+	text-align: center;
+	left: 20%;
+	right: 20%;
 }
+
 
 /******* END SECTION ********/
 
@@ -258,6 +264,7 @@ th, td {
 
 
 #projectDescription p {
+	font-family: 'Inconsolata', monospace;
 	font-size: 20px;
 	max-width: 60%;
 	vertical-align: center;
@@ -270,6 +277,7 @@ th, td {
 	padding-bottom: 100px; 
 	text-justify: inter-word;
 }
+
 
 
 
